--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "bootstrap": "^4.3.1",
+    "react": "^16.3.0",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-dom": "^16.3.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
