--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "lodash": "^4.17.11",
     "react": "^16.3.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.3.0",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
+    "react-redux": "^7.1.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^2.10.2",
     "redux-promise-middleware": "^3.2.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.12.9",
