--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "open": "^6.0.0",
     "react": "^16.3.0",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.3.0",
     "react-redux": "^7.1.0",
+    "reactjs-percentage-circle": "^1.0.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^2.10.2",
